<resources>
    <string name="app_name">Smart Agenda</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_title_settings">Instellingen</string>
    <string name="nav_title_reservation">Reserveren</string>
    <string name="nav_title_home">Home</string>
    <string name="error_title">Oops! Er ging iets fout!</string>
    <string name="error_msg">Probeer het nog een keer.</string>
    <string name="error_positive_button_msg">OK</string>
    <string name="network_unavailable_message">Netwerk is niet beschikbaar!</string>
    <string name="title_activity_reservation_overview">ReservationOverviewActivity</string>
    <string name="title_activity_login">Log in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Or register</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_username_or_password">This could be incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing username
        completions."
    </string>
    <string name="dialog_room_average_column_title">Gemiddeld</string>
    <string name="dialog_room_current_column_title">Huidig</string>
    <string name="dialog_room_temperature_row_title">Temperatuur</string>
    <string name="dialog_room_soundlevel_row_title">Geluidsniveau</string>
    <string name="dialog_room_lightlevel_row_title">Lichtniveau</string>
    <string name="dialog_room_action_reservation">Reserveer</string>
    <string name="dialog_action_cancel">Annuleer</string>
    <string name="preference_userdata_file_key">Userdata</string>

</resources>
